fix chat z-index

--- a/client/src/components/chat/chat.module.scss
+++ b/client/src/components/chat/chat.module.scss
@@ -11,7 +11,7 @@
   justify-content: center;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  z-index: 1000;
+  z-index: 3;
   padding: 0%;
   margin: 0%;
 
@@ -33,8 +33,6 @@
   }
 }
 
-
-
 .chatWindow {
   position: fixed;
   bottom: 10px;
@@ -50,6 +48,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 90%;
   max-height: 90%;
+  z-index: 5;
 }
 
 .chatHeader {
